[gd_scene load_steps=2 format=3 uid="uid://kp2i1ffekjkn"]

[ext_resource type="Script" uid="uid://dpf8gh28afwvl" path="res://script/menu/game_in_menu.gd" id="1_w86f2"]

[node name="GameInMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w86f2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="title" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -156.0
offset_right = 156.0
offset_bottom = 69.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "GAME PAUSE"

[node name="menu" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -106.0
offset_right = 160.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2

[node name="save" type="Button" parent="ColorRect/menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SAVE CURRENT GAME"

[node name="Popup" type="Popup" parent="ColorRect/menu/save"]

[node name="Label" type="Label" parent="ColorRect/menu/save/Popup"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30

[node name="help" type="Button" parent="ColorRect/menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "HELP"

[node name="back_to_game" type="Button" parent="ColorRect/menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "BACK TO GAME"

[node name="back_to_main_menu" type="Button" parent="ColorRect/menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "BACK TO MAIN MENU"

[node name="help" type="VBoxContainer" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -229.0
offset_top = -321.0
offset_right = 229.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="ColorRect/help"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "W-move up      S-move down
A-move left     D-move right
B-open/close the bag system
C-start/continue the dialogue
ESC-call the menu to save game
/return to main menu"

[node name="back" type="Button" parent="ColorRect/help"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "BACK"

[connection signal="pressed" from="ColorRect/menu/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="ColorRect/menu/help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="ColorRect/menu/back_to_game" to="." method="_on_back_to_game_pressed"]
[connection signal="pressed" from="ColorRect/menu/back_to_main_menu" to="." method="_on_back_to_main_menu_pressed"]
[connection signal="pressed" from="ColorRect/help/back" to="." method="_on_back_pressed"]
